--- a/SalesWebMvc/Views/Home/About.cshtml
+++ b/SalesWebMvc/Views/Home/About.cshtml
@@ -4,4 +4,9 @@
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>Professor: @ViewData["Professor"]</p>
+<p>Aluno: @ViewData["Aluno"]</p>
+
+<address>
+    <strong>More Information: </strong><a href="https://github.com/thiagoluzia">github.com/thiagoluzia</a>
+</address>
